web/css/layers.css
/* ... */
.layers-all .source-metadata div,
.layers-all .source-metadata p,
.layers-all .source-metadata span {
  color: #bbb;
}

.layer-date-range,
.layer-metadata,
.layer-date-wrap {
  color: #ccc;
}
.measurement-row .measurement-row-header {
  padding: 5px 0;
  position: relative;
  cursor: pointer;
}
.measurement-row .measurement-row-header .arrow-icon {
  color: #d54e21;
  width: 30px;
  height: 30px;
  opacity: 0.8;
  font-size: 26px;
  position: absolute;
  right: 12px;
  top: 50%;
  transform: translateY(-50%);
}
.measurement-row .source-nav-item {
  margin-left: 10px;
  cursor: pointer;
  font-family: 'Open Sans', sans-serif;
  font-size: 13px;
  font-weight: 300;
}
.measurement-row .source-nav-item:hover {
  color: #eee;
  background: #504d4d;
}
.measurement-row > .container {
  margin-top: 10px;
}
.measurement-row .source-nav-item.active {
  border-left: 10px solid #d54e21;
  margin-left: 0;
  color: #000;
  cursor: text;
  background: rgba(255, 255, 255, 0.9);
}
.measurement-row .source-metadata.overflow {
  height: 100px;
  overflow: hidden;
}
.measurement-row .source-sub-group .list-group-item {
  background: transparent;
  border-color: transparent;
  padding: 6px 10px;
  cursor: pointer;
}
.measurement-row .source-sub-group .list-group-item:hover {
  background: #ffffff4d;
}
.measurement-row .source-sub-group .wv-checkbox {
  color: #fff;
  font: 400 13px/13px 'Open Sans', sans-serif;
}
.measurement-row .wv-checkbox label {
  display: inline;
  color: #ddd;
  padding-left: 5px;
  pointer-events: none;
}
.layers-all .metadata-more,
.measurement-row .metadata-more {
  display: block;
  height: 20px;
  line-height: 20px;
  border-top: 1px solid #d54e21;
}

.layers-all .metadata-more {
  cursor: pointer;
  margin-top: 4px;
}

.layers-all .metadata-more:hover,
.layer-modal-content .measurement-row .metadata-more:hover {
  background: rgba(255, 255, 255, 0.3);
  cursor: pointer;
}

.layers-all .metadata-more .ellipsis,
.measurement-row .ellipsis {
  display: block;
  height: 12px;
  width: 40px;
  background: #d54e21 none repeat scroll 0 0;
  color: #fff;
  line-height: 0;
  margin: 0 auto;
  font-size: 1.5em;
  text-align: center;
  font-weight: 700;
}

.layers-all .metadata-more .ellipsis.up,
.layer-modal-content .measurement-row .metadata-more .ellipsis.up {
  font-size: 1em;
  line-height: 1em;
}

.layer-modal-content .measurement-row h3.source-orbits-title {
  color: #ddd;
  font-weight: 700;
  padding: 10px 0;
}

.layers-all .iCheck-checkbox {
  float: right;
  margin-top: 0.5em;
}

/* Layer Options */
.layer-settings-modal {
  margin-left: auto;
  margin-right: auto;
  top: 0;
  left: 298px;
  right: auto;
  bottom: auto;
  border-radius: 6px;
  position: absolute;
}
.layer-settings-modal .modal-title {
  font-size: 15px;
}
.wv-layers-options-dialog,
.wv-layers-options-dialog .close {
  color: #fff;
}
.wv-layers-options-dialog .modal-content {
  background: #282828;
  width: 300px;
}
.wv-layers-options-dialog .nav-item {
  width: 100%;
  border: 1px solid transparent;
  border-top-left-radius: 5px;
  border-top-right-radius: 5px;
}
.wv-layers-options-dialog .nav-item.dual {
  width: 136px;
}
.wv-layers-options-dialog .nav-item:hover {
  border: 1px solid #fff;
}
.wv-layers-options-dialog .nav-link {
  border: none;
}
.wv-layers-options-dialog .nav-item.active {
  background: #fff;
  border-color: #fff;
  color: #000;
}
.wv-layers-options-dialog .tab-content {
  padding: 5px;
  background: #484848;
}
.wv-layers-options-dialog .settings-component {
  margin-bottom: 14px;
  padding: 0 4px;
}
.wv-layers-options-dialog .tab-content .layer-threshold-select {
  margin-top: 10px;
}
.wv-layers-options-dialog .layer-threshold-select {
  height: 48px;
}
.wv-layers-options-dialog .tab-content .wv-palette-selector {
  width: 266px;
}

/** inline-block extra spacing */
.wv-palette-selector .wv-checkbox input {
  margin-left: 6px;
}

.wv-layers-options-dialog .tab-content .noUi-target {
  margin: 10px 18px;
}
.wv-layers-options-dialog .wv-header {
  font-size: 14px;
  margin-bottom: 8px;
}
.layer-opacity-select .wv-header {
  margin-top: 0;
}
.wv-layers-options-dialog .wv-header.wv-color-palette-label {
  margin-bottom: 0.5em;
}
.tab-content .wv-palette-selector-row label {
  margin-left: 8px;
}
.wv-layers-options-dialog .wv-label {
  color: #fff;
  width: 100%;
  position: relative;
}

.wv-layers-options-dialog .wv-label-opacity {
  text-align: right;
}
.wv-layers-options-dialog .wv-label-range {
  color: #fff;
}

.wv-layers-options-dialog .wv-label-range-min {
  float: left;
}

.wv-layers-options-dialog .wv-label-range-max {
  float: right;
}

.wv-layers-options-dialog .wv-palette-squash {
  float: right;
  margin-top: -30px;
}

/* Layers Info */
.sidebar-panel li.item a.wv-layers-info {
  color: #333;
  text-align: center;
}

.sidebar-panel li.item a.wv-layers-info .wv-layers-info-icon {
  border-color: #333;
}

.sidebar-panel li.item a.wv-layers-info.disabled {
  color: #aaa;
}

.sidebar-panel li.item a.wv-layers-info.disabled .wv-layers-info-icon {
  border-color: #aaa;
}

.sidebar-panel li.item a.wv-layers-info.disabled:hover {
  cursor: no-drop;
  background-color: transparent;
}

.sidebar-panel li.layer-hidden a.wv-layers-info {
  color: #999;
}

.sidebar-panel li.layer-hidden a.wv-layers-info .wv-layers-info-icon {
  border-color: #999;
}

.sidebar-panel li.layer-hidden a.wv-layers-info.disabled {
  color: #666;
}

.sidebar-panel li.layer-hidden a.wv-layers-info.disabled .wv-layers-info-icon {
  border-color: #666;
}

.custom-layer-dialog {
  width: 978px;
  max-width: 978px;
  background-color: #e8e8e8;
}
.custom-layer-dialog .product-outter-list-case {
  width: 963px;
  padding: 0 13px 13px 0;
}
.custom-layer-dialog .modal-content {
  background-color: #dcdcdc;
}
.custom-layer-dialog .modal-header {
  border-bottom: none;
}
.custom-layer-dialog .modal-header .close {
  font-size: 30px;
}
.custom-layer-dialog .modal-title {
  width: 100%;
}
/* ... */

